fix: fixing responsive desing on mobile

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@
 .btn {
     cursor: pointer;
     margin: 5px 5px;
-    padding: 0.5rem 0.1rem;   
+    padding: 0.5rem 0.1rem;
     width: 155px;
     font-size: 1.1rem;
     line-height: 1.5rem;
@@ -129,8 +129,8 @@
 
 @media only screen and (max-width: 501px){
     .container{
-        width: 100vw;
-        height: 100vh;
+        width: 100dvw;
+        height: 100dvh;
     }
     .buttons {
         display: flex;
